deleted the methods to find by prefix